<resources>
    <string name="app_name">KoiFarmShop</string>
    <string name="ten_ca">Tên cá</string>
    <string name="gia_25000">Gía: 25000đ</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
    <string name="mo_ta_chi_tiet_san_pham">Mô tả chi tiết sản phẩm</string>
    <string name="gio_hang_Trong">Giỏ hàng trống</string>
    <string name="gio_hang">Giỏ hàng</string>
    <string name="tong_tien">Tổng tiền:</string>
    <string name="tong_tien_50000">50.000</string>
    <string name="mua_hang">Mua hàng</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="chua_co_tai_khoan">Nếu chưa có tài khoản?</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="quen_mat_khau"><u><i>Quên mật khẩu</i></u></string>
    <string name="dang_ky_title">Đăng ký</string>
    <string name="name">Name</string>
    <string name="cofirm_password">Cofirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="btn_forget_pass">Quên mật khẩu</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="mat_hang_ca_koi_moi">Mặt hàng cá Koi mới</string>
    <string name="danh_sach_ca_koi">Danh sách Cá Koi</string>
    <string name="ca_koi">CÁ KOI</string>
    <string name="ten_Ca">Tên cá</string>
    <string name="sl_1">1</string>
    <string name="nhieu_mau">Nhiều màu</string>
    <string name="gia_500">Giá: 500k vnd</string>
    <string name="gia_250">Giá: 250 000vnd</string>
    <string name="mo_ta">Mô tả:</string>
    <string name="nhap_ca_can_tim">Nhập tên cá cần tìm</string>
    <string name="koi_farm_shop">Koi Farm Shop</string>
    <string name="trang_tim_kiem">Trang Tìm kiếm</string>
</resources>