<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:visibility="gone"
        android:id="@+id/txtgiohangtrong"
        android:text="@string/gio_hang_Trong"
        android:gravity="center"
        android:textSize="@dimen/text_size_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/gio_hang"
        android:background="@color/toolbar_color"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleviewgiohang"
        android:layout_margin="@dimen/dimen_5"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/dimen_50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnmuahang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dimen_10"
            android:padding="@dimen/dimen_5"
            android:text="@string/tong_tien"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/txttongtien"
            android:text="@string/tong_tien_50000"
            android:layout_marginRight="@dimen/dimen_20"
            android:gravity="right"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnmuahang"
        android:layout_marginBottom="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:text="@string/mua_hang"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>