<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_4"
    android:layout_margin="@dimen/dimen_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="@dimen/dimen_5"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/itemsing_image"
            android:layout_weight="3"
            android:src="@drawable/ic_new"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_100"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemsing_ten"
                android:text="@string/ten_Ca"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/itemsing_gia"
                android:text="@string/gia_250"
                android:textSize="@dimen/text_size_16"
                android:gravity="end"
                android:textColor="@android:color/holo_red_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/itemsing_mota"
                android:text="@string/mo_ta"
                android:textSize="@dimen/text_size_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>