<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/chi_tiet_san_pham"
        android:background="@color/toolbar_color"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:id="@+id/framegiohang"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_gravity="right"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="?attr/actionBarSize">
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_sl"
                android:layout_gravity="top|right"
                android:layout_width="@dimen/dimen_28"
                android:layout_height="@dimen/dimen_28"/>
            <ImageView
                android:layout_marginTop="@dimen/dimen_15"
                android:src="@drawable/ic_cart"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="@dimen/dimen_5"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgchitiet"
            android:src="@drawable/ic_new"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_200"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txttenca"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/ten_ca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtgiaca"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:text="@string/gia_25000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:background="@drawable/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnthemvaogiohang"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_5"
                android:backgroundTint="#478188"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/white"
                android:text="@string/them_vao_gio_hang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_5"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginLeft="@dimen/dimen_10"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:text="@string/mo_ta_chi_tiet_san_pham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>