<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_4"
    android:layout_margin="@dimen/dimen_5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_giohang_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_new"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_giohang_tenca"
                android:text="@string/ten_Ca"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:weightSum="18"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_giohang_gia"
                    android:text="@string/tong_tien_50000"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_weight="5"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/item_giohang_tru"
                    android:src="@drawable/ic_remove"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/item_giohang_soluong"
                    android:text="@string/sl_1"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_15"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/item_giohang_cong"
                    android:src="@drawable/ic_add"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/ic_handle"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/item_giohang_gia2"
                    android:text="@string/tong_tien_50000"
                    android:gravity="center|center_vertical"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>