<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dimen_50"
    tools:context=".activity.MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarManHinhChinh"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar_color"
                android:paddingTop="10dp"
                app:title="@string/trang_chu">

                <LinearLayout
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize">

                    <ImageView
                        android:id="@+id/imgsearch"
                        android:layout_marginRight="@dimen/dimen_15"
                        android:src="@drawable/ic_search"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"/>

                    <FrameLayout
                        android:id="@+id/framegiohang"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:layout_gravity="right"
                        android:layout_width="@dimen/dimen_50"
                        android:layout_height="?attr/actionBarSize">

                        <com.nex3z.notificationbadge.NotificationBadge
                            android:id="@+id/menu_sl"
                            android:layout_gravity="top|right"
                            android:layout_width="@dimen/dimen_28"
                            android:layout_height="@dimen/dimen_28"/>

                        <ImageView
                            android:layout_marginTop="@dimen/dimen_15"
                            android:src="@drawable/ic_cart"
                            android:layout_width="@dimen/dimen_30"
                            android:layout_height="@dimen/dimen_30"/>

                    </FrameLayout>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <ViewFlipper
                android:id="@+id/viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200">

            </ViewFlipper>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_light"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:text="@string/mat_hang_ca_koi_moi"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_50">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="@dimen/dimen_250"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_gravity="start">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_50"
                android:textSize="@dimen/text_size_25"
                android:textStyle="bold"
                android:text="@string/koi_farm_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/listViewManHinhChinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dimen_100">

            </ListView>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>